--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,9 @@ android {
         }
     }
 }
+repositories {
+    maven { url ' http://dev.open-rnd.net:30844/content/groups/public/' }
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -31,4 +34,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile group: "pl.openrnd.android", name: "multi-level-listview", version: "1.0.1"
 }
