--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,8 +1,8 @@
-<<<<<<< HEAD
+<<<<<<<=HEAD
 #Sat Mar 25 11:44:24 GMT 2017
 =======
 #Thu Mar 23 12:13:42 WET 2017
->>>>>>> 3a8c33b157e9720a69f8d2ba0acc68af8546baa7
+>>>>>>>=3a8c33b157e9720a69f8d2ba0acc68af8546baa7
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
