--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,7 +28,22 @@
             android:name=".PostsActivity"
             android:label="@string/title_activity_posts"
             android:theme="@style/AppTheme.NoActionBar"
-            android:title="Posts"></activity>
+            android:title="Posts" />
+        <activity
+            android:name=".CreatePostActivity"
+            android:label="@string/title_activity_create_post"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:title="@string/title_activity_create_post" />
+        <activity
+            android:name=".LocationOptionActivity"
+            android:label="@string/title_activity_location_option"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:title="@string/title_activity_location_option" />
+        <activity
+            android:name=".RestritionOptionActivity"
+            android:label="@string/title_activity_restrition_option"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:title="@string/title_activity_location_option" />
     </application>
 
 </manifest>
