--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "pt.ulisboa.tecnico.cmov.locmess"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -20,6 +20,7 @@ android {
 }
 repositories {
     maven { url 'http://dev.open-rnd.net:30844/content/groups/public/' }
+    mavenCentral()
 }
 
 dependencies {
@@ -34,5 +35,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-maps:10.2.1'
+    compile('com.mapbox.mapboxsdk:mapbox-android-sdk:5.0.0@aar') {
+        transitive = true
+    }
     testCompile 'junit:junit:4.12'
 }
