--- a/LocMessApp/build.gradle
+++ b/LocMessApp/build.gradle
@@ -15,8 +15,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
 }
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
