--- a/LocMessApp/app/build.gradle
+++ b/LocMessApp/app/build.gradle
@@ -25,6 +25,7 @@ repositories {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile(name:'Termite-WifiP2P-API', ext:'aar')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
