--- a/LocMessApp/app/src/main/AndroidManifest.xml
+++ b/LocMessApp/app/src/main/AndroidManifest.xml
@@ -37,7 +37,13 @@
             android:name=".activities.PostsActivity"
             android:label="@string/title_activity_posts"
             android:theme="@style/AppTheme.NoActionBar"
-            android:title="Posts" />
+            android:title="Posts"
+            android:parentActivityName=".activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity"
+            />
+        </activity>
         <activity
             android:name=".activities.CreatePostActivity"
             android:label="@string/title_activity_create_post"
