--- a/.gitignore
+++ b/.gitignore
@@ -14,18 +14,18 @@ local.properties
 .signing/
 
 # User-specific configurations
-.idea/libraries/
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/.name
-.idea/compiler.xml
-.idea/copyright/profiles_settings.xml
-.idea/encodings.xml
-.idea/misc.xml
-.idea/modules.xml
-.idea/scopes/scope_settings.xml
-.idea/vcs.xml
-*.iml
+ LocMessApp/.idea/libraries/
+ LocMessApp/.idea/workspace.xml
+ LocMessApp/.idea/tasks.xml
+ LocMessApp/.idea/.name
+ LocMessApp/.idea/compiler.xml
+ LocMessApp/.idea/copyright/profiles_settings.xml
+ LocMessApp/.idea/encodings.xml
+ LocMessApp/.idea/misc.xml
+ LocMessApp/.idea/modules.xml
+ LocMessApp/.idea/scopes/scope_settings.xml
+ LocMessApp/.idea/vcs.xml
+ LocMessApp/*.iml
 
 # OS-specific files
 .DS_Store
